# OCamCalib

./: CMakeLists.txt  README.md
include/: calib_data.h  calibration.h  chessboard.h  params_gflags.h  prova_cost.h  utils.h
src/: calibration.cc  chessboard.cc  main.cc  params_gflas.cc  prova_cost.cc  undistort.cc  utils.cc  utils_test.cc
